# Langchain1.0-Langgraph1.0-learning

./: .env.example  .gitignore  pyproject.toml
notebook/基础/: 1.model_practice.ipynb  2.prompt_template.ipynb  3.message_practice.ipynb  4.tool_practice.ipynb  6.agent_loop.ipynb  prompt_template.ipynb  simple_agent.ipynb
notebook/基础/tools/: calculator.ipynb  weather.ipynb  web_search.ipynb
notebook/实战技能/: 1.memory_basic.ipynb  2.context_management.ipynb  3.checkpointing.ipynb  4.middleware_basics.ipynb  5.structured_output.ipynb  6.validation_retry.ipynb  8.rag_advanced.ipynb  9.tools_and_agent.ipynb
notebook/实战技能/7.rag_basic/: 7.rag_basic.ipynb
notebook/实战技能/data/: langchain_intro.txt  test_docs.txt
notebook/第一二章/: practice.ipynb
notebook/进阶/: 1.langguraph_basics.ipynb  2.multi_agent.ipynb  3.conditional_routing.ipynb  4.image_input.ipynb  5.file_handling.ipynb  6.mixed_modality.ipynb  7.langsmith_integration.ipynb  error_handling.ipynb
