[project]
name = "my-test"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.15",
    "dotenv>=0.9.9",
    "langchain>=1.2.13",
    "langchain-deepseek>=1.0.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.12",
    "notebook>=7.5.5",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
