[project]
name = "my-test"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.6",
    "dashscope>=1.25.15",
    "dotenv>=0.9.9",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "langchain-pinecone>=0.2.13",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "notebook>=7.5.5",
    "pinecone>=7.3.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.3.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
